test/integration/good/decl_assign.stan
parameters {
  vector[10] xx_param;
}