test/integration/bad/new/variable-decl-bad7.stan
transformed data { vector[1]^